# sercure_bootloader_Baremetal

./: CMakeLists.txt  README.md  auto_build.bat  auto_test.bat  auto_test_cpp.bat  autobuild-script.bat  clean_all.bat  flash.bat  flash_all.bat
application/: CMakeLists.txt  STM32F411VETX_FLASH.ld
application/core/inc/: app_main.h
application/core/src/: app_main.c
application/driver/inc/: isr.h  nvic.h  sysclocks.h  sysinit.h  uart.h
application/driver/src/: isr.c  syscalls.c  sysclocks.c  sysinit.c  uart.c  uart_users.c
application/startup/: STM32F411VETX_FLASH.ld  startup_stm32f411vetx.s
bootloader/: CMakeLists.txt
bootloader/RSA2048/bigint/: bigint.c  bigint.h
bootloader/RSA2048/rsa2048/: rsa2048.c  rsa2048.h
bootloader/RSA2048/rsakeys/: rsa_keys.c  rsa_keys.h
bootloader/RSA2048/sha256/: sha256.h
bootloader/USB_DRIVER/: usbfs.c  usbfs.h
bootloader/core/inc/: boot_cfg.h  boot_fw_update.h  boot_main.h  boot_verify_signature.h  fw_metadata.h
bootloader/core/src/: boot_cfg.c  boot_fw_update.c  boot_main.c  boot_verify_signature.c  fw_metadata.c
bootloader/crypto/RSA2048/bigint/: bigint.c
bootloader/crypto/RSA2048/rsa2048/: rsa2048.c  rsa2048.h
bootloader/crypto/RSA2048/rsakeys/: rsa_keys.c  rsa_keys.h
bootloader/crypto/RSA2048/sha256/: sha256.c
bootloader/driver/inc/: flash.h  gpio.h  nvic.h  sysclocks.h  sysinit.h  tim2.h  uart.h
bootloader/driver/src/: flash.c  gpio.c  isr.c  nvic.c  syscalls.c  sysinit.c  tim2.c  uart.c  uart_users.c
bootloader/inc/: isr.h  sysclocks.h
bootloader/src/: isr.c  main.c  nvic.c  sysclocks.c  test_usb.c  uart_users.c
bootloader/startup/: startup_stm32f411vetx.s
bootloader/test/: test_feat.c  test_feat.h
custom-tool/firmware-flash/: CMakeLists.txt
custom-tool/firmware-flash-cpp/: CMakeLists.txt  build.bat
custom-tool/firmware-flash-cpp/inc/: sender.hpp  serial.hpp
custom-tool/firmware-flash-cpp/src/: main.cpp  sender.cpp  serial.cpp
custom-tool/firmware-flash/inc/: firmware_sender.h
custom-tool/firmware-flash/src/: firmware_sender.c  main.c
custom-tool/firmware-flash/test/: file_err.bat  test.bat  test_recv.c  test_send.c
custom-tool/gen-rsakeys/: convert_keys.py  gen_rsa_key.bat
tools/custom-tool/firmware-flash/inc/: serial_com.h
tools/custom-tool/firmware-flash/src/: firmware_sender.c  serial_com.c
